// Original file: exa/language_server_pb/language_server.proto

import type { GithubPullRequestInfo as _exa_auto_cascade_common_pb_GithubPullRequestInfo, GithubPullRequestInfo__Output as _exa_auto_cascade_common_pb_GithubPullRequestInfo__Output } from '../../exa/auto_cascade_common_pb/GithubPullRequestInfo';

export interface GetGithubPullRequestSearchInfoResponse {
  'pullRequestInfos'?: (_exa_auto_cascade_common_pb_GithubPullRequestInfo)[];
}

export interface GetGithubPullRequestSearchInfoResponse__Output {
  'pullRequestInfos': (_exa_auto_cascade_common_pb_GithubPullRequestInfo__Output)[];
}
